antlr/cpp/extract-interface/JavaParser.cpp

// Generated from Java.g4 by ANTLR 4.7


#include "JavaListener.h"

#include "JavaParser.h"


using namespace antlrcpp;
using namespace antlr4;

JavaParser::JavaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

JavaParser::~JavaParser() {
  delete _interpreter;
}

std::string JavaParser::getGrammarFileName() const {
  return "Java.g4";
}

const std::vector<std::string>& JavaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& JavaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

JavaParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::CompilationUnitContext::EOF() {
  return getToken(JavaParser::EOF, 0);
}

JavaParser::PackageDeclarationContext* JavaParser::CompilationUnitContext::packageDeclaration() {
  return getRuleContext<JavaParser::PackageDeclarationContext>(0);
}

std::vector<JavaParser::ImportDeclarationContext *> JavaParser::CompilationUnitContext::importDeclaration() {
  return getRuleContexts<JavaParser::ImportDeclarationContext>();
}

JavaParser::ImportDeclarationContext* JavaParser::CompilationUnitContext::importDeclaration(size_t i) {
  return getRuleContext<JavaParser::ImportDeclarationContext>(i);
}

std::vector<JavaParser::TypeDeclarationContext *> JavaParser::CompilationUnitContext::typeDeclaration() {
  return getRuleContexts<JavaParser::TypeDeclarationContext>();
}

JavaParser::TypeDeclarationContext* JavaParser::CompilationUnitContext::typeDeclaration(size_t i) {
  return getRuleContext<JavaParser::TypeDeclarationContext>(i);
}


size_t JavaParser::CompilationUnitContext::getRuleIndex() const {
  return JavaParser::RuleCompilationUnit;
}

void JavaParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->enterCompilationUnit(this);
  }
}

void JavaParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->exitCompilationUnit(this);
  }
}

JavaParser::CompilationUnitContext* JavaParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, JavaParser::RuleCompilationUnit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(219);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__0) {
      setState(218);
      packageDeclaration();
    }
    setState(224);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JavaParser::T__2) {
      setState(221);
      importDeclaration();
      setState(226);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(230);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JavaParser::T__1)
      | (1ULL << JavaParser::T__3)
      | (1ULL << JavaParser::T__6)
      | (1ULL << JavaParser::T__9)
      | (1ULL << JavaParser::T__10)
      | (1ULL << JavaParser::T__11)
      | (1ULL << JavaParser::T__12)
      | (1ULL << JavaParser::T__13)
      | (1ULL << JavaParser::T__14)
      | (1ULL << JavaParser::T__21)
      | (1ULL << JavaParser::T__48))) != 0) || _la == JavaParser::ENUM) {
      setState(227);
      typeDeclaration();
      setState(232);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(233);
    match(JavaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageDeclarationContext ------------------------------------------------------------------

JavaParser::PackageDeclarationContext::PackageDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::QualifiedNameContext* JavaParser::PackageDeclarationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}


size_t JavaParser::PackageDeclarationContext::getRuleIndex() const {
  return JavaParser::RulePackageDeclaration;
}

void JavaParser::PackageDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->enterPackageDeclaration(this);
  }
}

void JavaParser::PackageDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->exitPackageDeclaration(this);
  }
}

JavaParser::PackageDeclarationContext* JavaParser::packageDeclaration() {
  PackageDeclarationContext *_localctx = _tracker.createInstance<PackageDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, JavaParser::RulePackageDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(235);
    match(JavaParser::T__0);
    setState(236);
    qualifiedName();
    setState(237);
    match(JavaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDeclarationContext ------------------------------------------------------------------

JavaParser::ImportDeclarationContext::ImportDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::QualifiedNameContext* JavaParser::ImportDeclarationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}


size_t JavaParser::ImportDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleImportDeclaration;
}

void JavaParser::ImportDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->enterImportDeclaration(this);
  }
}

void JavaParser::ImportDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->exitImportDeclaration(this);
  }
}

JavaParser::ImportDeclarationContext* JavaParser::importDeclaration() {
  ImportDeclarationContext *_localctx = _tracker.createInstance<ImportDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, JavaParser::RuleImportDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(239);
    match(JavaParser::T__2);
    setState(241);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__3) {
      setState(240);
      match(JavaParser::T__3);
    }
    setState(243);
    qualifiedName();
    setState(246);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__4) {
      setState(244);
      match(JavaParser::T__4);
      setState(245);
      match(JavaParser::T__5);
    }
    setState(248);
    match(JavaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclarationContext ------------------------------------------------------------------

JavaParser::TypeDeclarationContext::TypeDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::ClassDeclarationContext* JavaParser::TypeDeclarationContext::classDeclaration() {
  return getRuleContext<JavaParser::ClassDeclarationContext>(0);
}

JavaParser::InterfaceDeclarationContext* JavaParser::TypeDeclarationContext::interfaceDeclaration() {
  return getRuleContext<JavaParser::InterfaceDeclarationContext>(0);
}

JavaParser::EnumDeclarationContext* JavaParser::TypeDeclarationContext::enumDeclaration() {
  return getRuleContext<JavaParser::EnumDeclarationContext>(0);
}

std::vector<JavaParser::ClassOrInterfaceModifierContext *> JavaParser::TypeDeclarationContext::classOrInterfaceModifier() {
  return getRuleContexts<JavaParser::ClassOrInterfaceModifierContext>();
}

JavaParser::ClassOrInterfaceModifierContext* JavaParser::TypeDeclarationContext::classOrInterfaceModifier(size_t i) {
  return getRuleContext<JavaParser::ClassOrInterfaceModifierContext>(i);
}


size_t JavaParser::TypeDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleTypeDeclaration;
}

void JavaParser::TypeDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->enterTypeDeclaration(this);
  }
}

void JavaParser::TypeDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->exitTypeDeclaration(this);
  }
}

JavaParser::TypeDeclarationContext* JavaParser::typeDeclaration() {
  TypeDeclarationContext *_localctx = _tracker.createInstance<TypeDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, JavaParser::RuleTypeDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(262);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JavaParser::T__3:
      case JavaParser::T__6:
      case JavaParser::T__9:
      case JavaParser::T__10:
      case JavaParser::T__11:
      case JavaParser::T__12:
      case JavaParser::T__13:
      case JavaParser::T__14:
      case JavaParser::T__21:
      case JavaParser::T__48:
      case JavaParser::ENUM: {
        enterOuterAlt(_localctx, 1);
        setState(253);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(250);
            classOrInterfaceModifier(); 
          }
          setState(255);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
        }
        setState(259);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case JavaParser::T__6: {
            setState(256);
            classDeclaration();
            break;
          }

          case JavaParser::T__21:
          case JavaParser::T__48: {
            setState(257);
            interfaceDeclaration();
            break;
          }

          case JavaParser::ENUM: {
            setState(258);
            enumDeclaration();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

      case JavaParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(261);
        match(JavaParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclarationContext ------------------------------------------------------------------

JavaParser::ClassDeclarationContext::ClassDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::ClassDeclarationContext::Identifier() {
  return getToken(JavaParser::Identifier, 0);
}

JavaParser::ClassBodyContext* JavaParser::ClassDeclarationContext::classBody() {
  return getRuleContext<JavaParser::ClassBodyContext>(0);
}

JavaParser::TypeParametersContext* JavaParser::ClassDeclarationContext::typeParameters() {
  return getRuleContext<JavaParser::TypeParametersContext>(0);
}

JavaParser::TypeContext* JavaParser::ClassDeclarationContext::type() {
  return getRuleContext<JavaParser::TypeContext>(0);
}

JavaParser::TypeListContext* JavaParser::ClassDeclarationContext::typeList() {
  return getRuleContext<JavaParser::TypeListContext>(0);
}


size_t JavaParser::ClassDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleClassDeclaration;
}

void JavaParser::ClassDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->enterClassDeclaration(this);
  }
}

void JavaParser::ClassDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->exitClassDeclaration(this);
  }
}

JavaParser::ClassDeclarationContext* JavaParser::classDeclaration() {
  ClassDeclarationContext *_localctx = _tracker.createInstance<ClassDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, JavaParser::RuleClassDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(264);
    match(JavaParser::T__6);
    setState(265);
    match(JavaParser::Identifier);
    setState(267);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__15) {
      setState(266);
      typeParameters();
    }
    setState(271);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__7) {
      setState(269);
      match(JavaParser::T__7);
      setState(270);
      type();
    }
    setState(275);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__8) {
      setState(273);
      match(JavaParser::T__8);
      setState(274);
      typeList();
    }
    setState(277);
    classBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumDeclarationContext ------------------------------------------------------------------

JavaParser::EnumDeclarationContext::EnumDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::EnumDeclarationContext::ENUM() {
  return getToken(JavaParser::ENUM, 0);
}

tree::TerminalNode* JavaParser::EnumDeclarationContext::Identifier() {
  return getToken(JavaParser::Identifier, 0);
}

JavaParser::EnumBodyContext* JavaParser::EnumDeclarationContext::enumBody() {
  return getRuleContext<JavaParser::EnumBodyContext>(0);
}

JavaParser::TypeListContext* JavaParser::EnumDeclarationContext::typeList() {
  return getRuleContext<JavaParser::TypeListContext>(0);
}


size_t JavaParser::EnumDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleEnumDeclaration;
}

void JavaParser::EnumDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->enterEnumDeclaration(this);
  }
}

void JavaParser::EnumDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  if (listener != nullptr) {
    auto parserListener = static_cast<JavaListener *>(listener);
    parserListener->exitEnumDeclaration(this);
  }
}

JavaParser::EnumDeclarationContext* JavaParser::enumDeclaration() {
  EnumDeclarationContext *_localctx = _tracker.createInstance<EnumDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, JavaParser::RuleEnumDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(279);
    match(JavaParser::ENUM);
    setState(280);
    match(JavaParser::Identifier);
    setState(283);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__8) {
      setState(281);
      match(JavaParser::T__8);
      setState(282);
      typeList();
    }
    setState(285);
    enumBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InterfaceDeclarationContext ------------------------------------------------------------------

JavaParser::InterfaceDeclarationContext::InterfaceDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::NormalInterfaceDeclarationContext* JavaParser::InterfaceDeclarationContext::normalInterfaceDeclaration() {
  return getRuleContext<JavaParser::NormalInterfaceDeclarationContext>(0);
}

JavaParser::AnnotationTypeDeclarationContext* JavaParser::InterfaceDeclarationContext::annotationTypeDeclaration() {
  return getRuleContext<JavaParser::AnnotationTypeDeclarationContext>(0);
}


size_t JavaParser::InterfaceDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleInterfaceDeclaration;
}
